# shift_task

./: .env.example  .flake8  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: fa1f6a01aa41_first_migration.py
docker/: .dockerignore  Dockerfile  default.conf  server-entrypoint.sh
shift_task/: main.py
shift_task/api/: routers.py  utils.py  validators.py
shift_task/api/endpoints/: user.py
shift_task/core/: base.py  config.py  db.py  init_db.py  models.py  user.py
shift_task/schemas/: salary.py  user.py
tests/: conftest.py  test_db.py  test_main.py
